Bug 296048 - Kmail Crash
Summary: Kmail Crash
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-15 09:22 UTC by datweety
Modified: 2012-04-06 17:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description datweety 2012-03-15 09:22:33 UTC
Application: kontact (4.8.0)
KDE Platform Version: 4.8.1 (4.8.1) "release 481"
Qt Version: 4.8.0
Operating System: Linux 3.2.9 x86_64
Distribution: "openSUSE 12.1 (x86_64)"

-- Information about the crash:
I am not sure but I think it is a similar cause:
While changing my Identities at a reply mail composer, kmail crashed. I have defined signatures at some of my identities.
Unfortunately I posted a bug report to a wrong bug# 295576.
There I found out, that deactivating the use of "html view" from security settings in kmail, solved my crashes when loading a html-mail. I didnt deactivate that for new mails etc and libqtwebkit4 is again at the trace. Seems like corresponding behaviour.

Hope this helps

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f2a587b6780 (LWP 6486))]

Thread 3 (Thread 0x7f2a3fdba700 (LWP 6487)):
#0  0x00007f2a50614a14 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f2a54fa99dc in ?? () from /usr/lib64/libQtWebKit.so.4
#2  0x0000000000000210 in ?? ()
#3  0x00007f2a55960200 in ?? () from /usr/lib64/libQtWebKit.so.4
#4  0x00007f2a5596e2a8 in ?? () from /usr/lib64/libQtWebKit.so.4
#5  0x00007f2a5596e2d0 in ?? () from /usr/lib64/libQtWebKit.so.4
#6  0x00007f2a3fdba9c0 in ?? ()
#7  0x00007f2a58607c35 in _dl_runtime_resolve () from /lib64/ld-linux-x86-64.so.2
#8  0x00007f2a50610daa in start_thread () from /lib64/libpthread.so.0
#9  0x00007f2a55cbd0ed in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f2a3f4a1700 (LWP 6488)):
#0  0x00007f2a55cc9500 in pthread_mutex_lock () from /lib64/libc.so.6
#1  0x00007f2a50062afc in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f2a50062f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f2a56435956 in QEventDispatcherGlib::processEvents (this=0x7f2a380008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f2a56405682 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f2a564058d7 in QEventLoop::exec (this=0x7f2a3f4a0e00, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f2a56306537 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f2a5630955b in QThreadPrivate::start (arg=0x77ff30) at thread/qthread_unix.cpp:298
#8  0x00007f2a50610daa in start_thread () from /lib64/libpthread.so.0
#9  0x00007f2a55cbd0ed in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f2a587b6780 (LWP 6486)):
[KCrash Handler]
#6  begin (this=0x10) at /usr/include/QtCore/qlist.h:101
#7  begin (this=0x10) at /usr/include/QtCore/qlist.h:268
#8  KPIMIdentities::IdentityManager::begin (this=0x0) at /usr/src/debug/kdepimlibs-4.8.1/kpimidentities/identitymanager.cpp:290
#9  0x00007f2a3d2e1eb6 in KPIMIdentities::IdentityManager::identityForUoid (this=0x0, uoid=756423273) at /usr/src/debug/kdepimlibs-4.8.1/kpimidentities/identitymanager.cpp:310
#10 0x00007f29f6413e08 in TemplateParser::TemplateParser::getPlainSignature (this=<optimized out>) at /usr/src/debug/kdepim-4.8.1/templateparser/templateparser.cpp:1155
#11 0x00007f29f6422208 in TemplateParser::TemplateParser::processWithTemplate (this=0x7fff0eccb810, tmpl=...) at /usr/src/debug/kdepim-4.8.1/templateparser/templateparser.cpp:1103
#12 0x00007f29f641378e in TemplateParser::TemplateParser::process (this=0x7fff0eccb810, aorig_msg=<optimized out>, afolder=<optimized out>) at /usr/src/debug/kdepim-4.8.1/templateparser/templateparser.cpp:283
#13 0x00007f29f7304960 in KMComposeWin::slotDelayedApplyTemplate (this=0x195e230, job=<optimized out>) at /usr/src/debug/kdepim-4.8.1/kmail/kmcomposewin.cpp:1023
#14 0x00007f2a5641a761 in QMetaObject::activate (sender=0xd95220, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff0eccbab0) at kernel/qobject.cpp:3556
#15 0x00007f2a5689b522 in KJob::result (this=<optimized out>, _t1=0xd95220) at /usr/src/debug/kdelibs-4.8.1/build/kdecore/kjob.moc:208
#16 0x00007f2a5689b560 in KJob::emitResult (this=0xd95220) at /usr/src/debug/kdelibs-4.8.1/kdecore/jobs/kjob.cpp:318
#17 0x00007f2a5641f926 in QObject::event (this=0xd95220, e=<optimized out>) at kernel/qobject.cpp:1204
#18 0x00007f2a56e19e84 in notify_helper (e=0x27fb3d0, receiver=0xd95220, this=0x638280) at kernel/qapplication.cpp:4550
#19 QApplicationPrivate::notify_helper (this=0x638280, receiver=0xd95220, e=0x27fb3d0) at kernel/qapplication.cpp:4522
#20 0x00007f2a56e1ed03 in QApplication::notify (this=0x7fff0eccc470, receiver=0xd95220, e=0x27fb3d0) at kernel/qapplication.cpp:4411
#21 0x00007f2a57b5e656 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#22 0x00007f2a5640689c in QCoreApplication::notifyInternal (this=0x7fff0eccc470, receiver=0xd95220, event=0x27fb3d0) at kernel/qcoreapplication.cpp:876
#23 0x00007f2a5640a13a in sendEvent (event=0x27fb3d0, receiver=0xd95220) at kernel/qcoreapplication.h:231
#24 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x60da60) at kernel/qcoreapplication.cpp:1500
#25 0x00007f2a564354c3 in sendPostedEvents () at kernel/qcoreapplication.h:236
#26 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:279
#27 0x00007f2a5006258d in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#28 0x00007f2a50062d88 in ?? () from /usr/lib64/libglib-2.0.so.0
#29 0x00007f2a50062f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#30 0x00007f2a564358ef in QEventDispatcherGlib::processEvents (this=0x60d320, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#31 0x00007f2a56ebd2de in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007f2a56405682 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007f2a564058d7 in QEventLoop::exec (this=0x7fff0eccc400, flags=...) at kernel/qeventloop.cpp:204
#34 0x00007f2a5640a435 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#35 0x0000000000403919 in main (argc=1, argv=0x7fff0eccca98) at /usr/src/debug/kdepim-4.8.1/kontact/src/main.cpp:218

This bug may be a duplicate of or related to bug 295534.

Reported using DrKonqi
Comment 1 Laurent Montel 2012-03-29 10:00:21 UTC
Git commit 5d328a9fc87a57d177f4d51e946e576621438985 by Montel Laurent.
Committed on 29/03/2012 at 11:58.
Pushed by mlaurent into branch 'master'.

Fix Bug 296048 - Kmail Crash

I didn't success to reproduce this crash but it's right if we don't set
IdentityManager in parser and we have %SIGNATURE in identity template it
will crash
FIXED-IN: 4.8.2

M  +2    -2    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/5d328a9fc87a57d177f4d51e946e576621438985
Comment 2 Laurent Montel 2012-03-29 10:01:02 UTC
Git commit e7159bff7c796ce153676ac61041a2928875b118 by Montel Laurent.
Committed on 29/03/2012 at 11:58.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 296048 - Kmail Crash

I didn't success to reproduce this crash but it's right if we don't set
IdentityManager in parser and we have %SIGNATURE in identity template it
will crash
FIXED-IN: 4.8.2
(cherry picked from commit 5d328a9fc87a57d177f4d51e946e576621438985)

M  +2    -2    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/e7159bff7c796ce153676ac61041a2928875b118
Comment 3 datweety 2012-04-06 10:57:09 UTC
Hi all, 

just updated to 4.8.2 but crash still persists.

How to reproduce:
- Set Kmail to show html messages
- select non html-message in mail-list
- select html-message in mail list
-> Crash

Hope this helps.
greez2all
Tweety
Comment 4 Laurent Montel 2012-04-06 17:09:45 UTC
same backtrace ?