Fix Bug 296048 - Kmail Crash

I didn't success to reproduce this crash but it's right if we don't set
IdentityManager in parser and we have %SIGNATURE in identity template it
will crash
FIXED-IN: 4.8.2
BUG: 296048